--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>তামাত্তু হজ্জ</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
